--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-visibility-sensor": "^3.11.0",
     "reactstrap": "^5.0.0-beta"
   }
 }
