--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "popper.js": "^1.12.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^3.11.0",
     "reactstrap": "^5.0.0-beta"
